--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "goran-milovanovic",
   "private": true,
   "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Goran Milovanovic <goramm@gmail.com>",
   "dependencies": {
+    "bootstrap": "^4.5.3",
     "gatsby": "^2.24.91",
     "gatsby-image": "^2.4.21",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.4.37",
     "gatsby-plugin-offline": "^3.2.38",
     "gatsby-plugin-react-helmet": "^3.3.14",
+    "gatsby-plugin-sass": "^2.4.2",
     "gatsby-plugin-sharp": "^2.6.43",
     "gatsby-source-filesystem": "^2.3.37",
     "gatsby-transformer-sharp": "^2.5.20",
-    "prop-types": "^15.7.2",
+    "node-sass": "^4.14.1",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0"
   },
